--- a/README.Rmd
+++ b/README.Rmd
@@ -53,6 +53,6 @@ knitr::include_graphics("man/figures/packages.png")
 The set of R packages are developed and maintained by the [*Ecosystem Modelling Facility*](https://emf.creaf.cat) unit at [*CREAF*](https://www.creaf.cat/) (in Spain), in close collaboration with researchers from [*URFM-INRAE*](https://www6.paca.inrae.fr/ecologie_des_forets_mediterraneennes/) (in France) and [*CTFC*](https://www.ctfc.cat/) (in Spain).
 
 ```{r, out.width='60%', fig.align="center", echo=FALSE}
-knitr::include_graphics("man/figures/logos.png")
+knitr::include_graphics("man/figures/institution_logos.png")
 ```
 
