--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ output: github_document
 knitr::opts_chunk$set(collapse = TRUE, comment = "#>", fig.path = "README-")
 ```
 
-# From plant traits to model parameters
+# From plant traits to model parameters <a href="https://emf-creaf.github.io/traits4models/"><img src="man/figures/logo.png" align="right" height="139" alt="traits4models website" /></a>
 
   <!-- badges: start -->
   [![R-CMD-check](https://github.com/emf-creaf/traits4models/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/emf-creaf/traits4models/actions/workflows/R-CMD-check.yaml)
@@ -38,7 +38,7 @@ A number of *vignettes* illustrate how to initialize inputs and run simulation m
 
 ## Companion R packages
 
-The development of **traits4models** is intended to complement packages **medfate** and **medfateland**. Another package of the same modelling framework is:
+The development of **traits4models** is intended to complement packages [**medfate**](https://emf-creaf.github.io/medfate) and [**medfateland**](https://emf-creaf.github.io/medfateland). Another package of the same modelling framework is:
 
   + Package [**meteoland**](https://emf-creaf.github.io/meteoland) allows generating daily weather input for simulation models in **medfate** and **medfateland**.
 
