--- a/README.Rmd
+++ b/README.Rmd
@@ -38,15 +38,19 @@ A number of *vignettes* illustrate how to initialize inputs and run simulation m
 
 ## Companion R packages
 
-The development of **traits4models** is intended to complement packages [**medfate**](https://emf-creaf.github.io/medfate) and [**medfateland**](https://emf-creaf.github.io/medfateland). Another package of the same modelling framework is:
+The development of **traits4models** is intended to complement packages [**medfate**](https://emf-creaf.github.io/medfate) and [**medfateland**](https://emf-creaf.github.io/medfateland). 
 
-  + Package [**meteoland**](https://emf-creaf.github.io/meteoland) allows generating daily weather input for simulation models in **medfate** and **medfateland**.
+Two other packages complete the simulation framework, but can be used for many other purposes beyond forest modelling:
 
-The relationships between the four packages are illustrated in the figure below, where black arrows indicate package dependencies and gray arrows indicate model parameter provision.
+  + Package [**meteoland**](https://emf-creaf.github.io/meteoland) allows generating daily weather input for simulation models in **medfate** and **medfateland**. Package **meteoland** is a dependency for **medfate** and **medfateland**, but can be used independently to obtain daily weather data.
+  + Package [**forestables**](https://emf-creaf.github.io/forestables) allows reading and harmonizing forest inventory data to a common data structure. Initialization workflows in **medfateland** can use data from **forestables**, but the data structures of the package can be used for many studies beyond modelling.
 
-```{r, out.width='60%', fig.align="center", echo=FALSE}
+The relationships between the five packages are illustrated in the figure below, where black arrows indicate package dependencies and gray arrows indicate model parameter or data provision.
+
+```{r, out.width='80%', fig.align="center", echo=FALSE}
 knitr::include_graphics("man/figures/packages.png")
 ```
+
 
 
 ## Authorship
@@ -57,3 +61,7 @@ The set of R packages are developed and maintained by the [*Ecosystem Modelling 
 knitr::include_graphics("man/figures/institution_logos.png")
 ```
 
+
+## Funding
+
++ **Research project**: Boosting process-based models to project forest dynamics and associated ecosystem services at stand-to-regional scales (BOMFORES). **Financial Entity**: Ministerio de Ciencia e Innovación (PID2021-126679OB-I00). **Duration from**: 01/09/2022 **to**: 31/08/2024. **PI**: Miquel De Cáceres.
